[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
nes-base = { path = "../nes-base" }
nes-cartridge = { path = "../nes-cartridge" }
nes-board = { path = "../nes-board" }
nes-cpu = { path = "../nes-cpu" }
nes-ram = { path = "../nes-ram" }
nes-bus = { path = "../nes-bus" }
env_logger = "0.11.8"
log = "0.4.27"
